@startuml
top to bottom direction

entity "User" {
  *id : number <<generated>>
  --
  *email : string
  *created_at : datetime
  updated_at : datetime
}

entity "Monitor" {
  *id : number <<generated>>
  --
  *uuid : string <<generated>>
  *user_id : number <<FK>>
  *url : string
  *expected_http_code : int
  *frequency : string
  *next_check_at : datetime
  *created_at : datetime
  updated_at : datetime
}

entity "MonitorAccessToken" {
  *id : number <<generated>>
  --
  *monitor_id : number <<FK>>
  *token_hash : string
  *expires_at : datetime
  used_at : datetime
  refreshed_at : datetime
  *created_at : datetime
  updated_at : datetime
}

entity "MonitorCheck" {
  *id : number <<generated>>
  --
  *monitor_id : number <<FK>>
  http_code : int
  *status : string
  *checked_at : datetime
  *created_at : datetime
  updated_at : datetime
}

User ||--|{ Monitor
Monitor ||--|{ MonitorCheck
Monitor ||--|{ MonitorAccessToken
@enduml